--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿aiohappyeyeballs==2.4.4
+aiohappyeyeballs==2.4.4
 aiohttp==3.11.11
 aiosignal==1.3.2
 annotated-types==0.6.0
@@ -83,6 +83,7 @@ jedi==0.19.1
 jieba3k==0.35.1
 Jinja2==3.1.3
 jiter==0.8.2
+joblib==1.1.1
 json5==0.9.24
 jsonpointer==2.4
 jsonschema==4.21.1
@@ -119,6 +120,7 @@ nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.3
 newspaper3k==0.2.8
+nltk==3.9.1
 notebook==7.1.2
 notebook_shim==0.2.4
 numba==0.59.1
@@ -128,9 +130,11 @@ openpyxl==3.1.2
 overrides==7.7.0
 packaging==24.0
 pandas==2.2.2
+pandas-profiling==3.2.0
 pandocfilters==1.5.1
 parso==0.8.4
 patsy==0.5.6
+phik==0.12.4
 pillow==10.3.0
 platformdirs==4.2.0
 plotly==5.20.0
@@ -153,6 +157,7 @@ python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
 pytz==2024.1
 PyWavelets==1.6.0
+pywin32==306
 pywinpty==2.0.13
 PyYAML==6.0.1
 pyzmq==25.1.2
@@ -168,11 +173,12 @@ rfc3986-validator==0.1.1
 rpds-py==0.18.0
 rsa==4.9
 safetensors==0.5.2
+scikit-learn==1.4.2
 scipy==1.13.0
 seaborn==0.13.2
 Send2Trash==1.8.3
 service-identity==24.2.0
-setuptools==69.2.0
+setuptools==75.8.0
 sgmllib3k==1.0.0
 six==1.16.0
 sniffio==1.3.1
@@ -212,6 +218,7 @@ webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.7.0
 Werkzeug==3.0.2
+wheel==0.45.1
 widgetsnbextension==4.0.10
 xarray==2024.3.0
 xlrd==2.0.1
